--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -708,7 +708,7 @@ a {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr;
-  gap: 13px;
+  gap: 15px;
   font-family: Inter;
   font-size: 12px;
   font-weight: 400;
@@ -3294,6 +3294,8 @@ a {
   .footer__container {
     padding: 0;
 
+
+
     // padding: 50px 100px 20px;
     // display: grid;
     // grid-template-columns: 1fr;
@@ -3560,40 +3562,44 @@ a {
     }
 
     .footer__bottom-block {
-      padding: 25px 0 20px;
+      // padding-bottom: 65px;
+      padding: 28px 0 50px;
       // grid-row: 4/5;
       display: grid;
-      grid-template-columns: 116px 1.7% 18% 3.4% 203px 9.4% 185px 6.2% auto;
-      grid-template-rows: 56% 40%;
-      align-items: center;
-      gap: 4% 0;
+      grid-template-columns: 116px 200px 6% 203px 6% 185px 3% 1fr;
+      grid-auto-rows: 1fr;
+      grid-template-areas:  "a b . d . e . f" 
+                            "a c . d . e . f"
+                            "a c . d . e . f";
+      align-items: start;
+      align-content: start;
+      gap: 5px 30px;
 
       @media (max-width: 1512px) {
-        grid-template-columns: 116px 2% 217px 3% 172px 4% 185px 2% auto;
-        grid-template-rows: 31% 66%;
-        gap: 3% 0;
-        padding-top: 25px;
+        // grid-template-columns: 116px 2% 217px 3% 172px 4% 185px 2% auto;
+        // grid-template-rows: 31% 66%;
+        // gap: 3% 0;
+        // padding-top: 25px;
       }
 
       @media (max-width: 1400px) {
-        grid-template-columns: 132px 1fr 205px;
-        grid-template-rows: 34% 18% 37%;
-        gap: 6% 2%;
-        padding-top: 15px;
+        // grid-template-columns: 132px 1fr 205px;
+        // grid-template-rows: 34% 18% 37%;
+        // gap: 6% 2%;
+        // padding-top: 15px;
       }
 
       @media (max-width: 760px) {
-        grid-template-rows: 34% 24% 37%;
+        // grid-template-rows: 34% 24% 37%;
         // grid-template-rows: 34% 18% 37%;
       }
 
       @media (max-width: 660px) {
-        grid-template-columns: 1fr;
-        grid-template-rows: 44px 17px 44px 86px 105px 60px;
-
+        // grid-template-columns: 1fr;
+        // grid-template-rows: 44px 17px 44px 86px 105px 60px;
         // grid-template-rows: repeat(6, 1fr);
-        padding-top: 23px;
-        gap: 20px;
+        // padding-top: 23px;
+        // gap: 20px;
       }
 
       // position: absolute;
@@ -3633,17 +3639,20 @@ a {
       }
 
       .logo {
-        grid-column: 1/2;
-        grid-row: 1/3;
-        align-self: center;
+        grid-area: a;
+        align-self: start;
+        padding-top: 5px;
+        // grid-column: 1/2;
+        // grid-row: 1/3;
+        // align-self: center;
         // @media (max-width: 768px) {
         //   max-width: 137px;
         //   max-height: 37px;
         // }
 
         @media (max-width: 1400px) {
-          grid-column: 1/2;
-          grid-row: 1/2;
+          // grid-column: 1/2;
+          // grid-row: 1/2;
           // flex: 1 1 50%;
         }
 
@@ -3657,7 +3666,10 @@ a {
       }
 
       .footer__copyright {
-        grid-column: 3/4;
+        align-self: start;
+        // grid-column: 3/4;
+        grid-area: b;
+
         font-family: Inter;
         font-size: 12px;
         font-weight: 400;
@@ -3665,8 +3677,6 @@ a {
         text-align: left;
         // line-height: 35.23px;
         color: #a9a9a9;
-        align-self: end;
-        vertical-align: bottom;
 
         // grid-row: 1/2;
 
@@ -3695,8 +3705,10 @@ a {
       }
 
       .footer__btn {
-        grid-column: 5/6;
-        grid-row: 1/3;
+        // grid-column: 5/6;
+        // grid-row: 1/3;
+        grid-area: d;
+
         width: 100%;
         height: 49px;
         font-family: Inter;
@@ -3754,11 +3766,16 @@ a {
       }
 
       .footer__info-links {
-        grid-column: 3/4;
-        // display: grid;
+        margin-top: -5px;
+        // grid-column: 3/4;
+        grid-area: c;
+
+
+        display: grid;
+        grid-auto-flow: row;
         // grid-template-columns: 52% 48%;
         // grid-template-rows: 1fr;
-        // gap: 5px;
+        gap: 5px;
         // align-self: start;
 
         @media (max-width: 1512px) {
@@ -3782,11 +3799,11 @@ a {
         }
 
         @media (max-width: 660px) {
-          grid-template-columns: 1fr;
-          grid-template-rows: 1fr 1fr;
-          grid-column: 1/2;
-          grid-row: 3/4;
-          gap: 10px;
+          // grid-template-columns: 1fr;
+          // grid-template-rows: 1fr 1fr;
+          // grid-column: 1/2;
+          // grid-row: 3/4;
+          // gap: 10px;
         }
 
         .footer__policy {
@@ -3811,62 +3828,84 @@ a {
       }
 
       .footer__developer {
+        grid-area: e;
+        align-self: start;
+        padding-top: 5px;
+
         @media (max-width: 1400px) {
-          grid-column: 3/4;
-          grid-row: 3/4;
+          // grid-column: 3/4;
+          // grid-row: 3/4;
         }
 
         @media (max-width: 1100px) {
           // justify-content: end;
-          justify-items: end;
-          grid-template-columns: 4fr 7fr;
-          // justify-self: end;
-          align-self: start;
-          padding-top: 8px;
-          gap: 15px;
+          // justify-items: end;
+          // grid-template-columns: 4fr 7fr;
+          // // justify-self: end;
+          // align-self: start;
+          // padding-top: 8px;
+          // gap: 15px;
         }
 
         @media (max-width: 660px) {
-          grid-column: 1/2;
-          grid-row: 6/7;
-          padding-top: 0px;
-          justify-content: start;
-          justify-items: start;
-          grid-template-columns: auto auto;
+          // grid-column: 1/2;
+          // grid-row: 6/7;
+          // padding-top: 0px;
+          // justify-content: start;
+          // justify-items: start;
+          // grid-template-columns: auto auto;
         }
 
         .developer__text {
         }
       }
 
-      .footer__desc {
-        grid-column: 9/10;
-        grid-row: 1/3;
-        opacity: 0.5;
-        color: #fff;
-        font-family: Inter;
-        font-size: 13px;
-        font-weight: 400;
-        line-height: 15.73px;
-        text-align: left;
+      .footer__desc-wrap {
+        // grid-column: 9/10;
+        grid-area: f;
 
-        @media (max-width: 1400px) {
-          grid-column: 1/3;
-          grid-row: 3/4;
-          align-self: start;
-        }
-        @media (max-width: 1100px) {
-          font-size: 14px;
-          line-height: 117%;
-          max-width: 95%;
-        }
+        display: grid;
+        grid-auto-flow: row;
+        gap: 10px;
+        justify-items: start;
 
-        @media (max-width: 660px) {
-          grid-column: 1/2;
-          grid-row: 5/6;
-          max-width: 100%;
+        .footer__desc {
+          // grid-row: 1/3;
+          color: rgba(#fff, 0.5);
+          font-family: Inter;
+          font-size: 13px;
+          font-weight: 400;
+          line-height: 15.73px;
+          text-align: left;  
+  
+          @media (max-width: 1400px) {
+            // grid-column: 1/3;
+            // grid-row: 3/4;
+            // align-self: start;
+          }
+          @media (max-width: 1100px) {
+            // font-size: 14px;
+            // line-height: 117%;
+            // max-width: 95%;
+          }
+  
+          @media (max-width: 660px) {
+            // grid-column: 1/2;
+            // grid-row: 5/6;
+            // max-width: 100%;
+          }
         }
-      }
+  
+        .footer__agent-link {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 19.36px;
+          text-align: center;
+          color: rgba(#fff, 0.5);
+  
+        }
+      }      
     }
   }
 
