--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3088,6 +3088,10 @@ a {
 
   .header__container {
     padding: 0;
+    display: grid;
+    align-content: center;
+    height: 100%;
+
     .header__nav {
     }
 
@@ -3103,10 +3107,11 @@ a {
     }
 
     .header__top-block {
-      padding: 15px 0 26px;
+      // padding: 15px 0 26px;
       display: grid;
       grid-template-columns: 200px 1fr 200px;
       align-items: center;
+      // align-content: center;
       gap: 15px;
 
       @media (max-width: 1512px) {
@@ -3138,7 +3143,7 @@ a {
 
           .nav__link {
             text-decoration: underline;
-            text-underline-offset: 23px;
+            text-underline-offset: 26px;
             text-decoration-color: transparent;
             text-decoration-thickness: 4px;
             transition: color 0.3s ease-in-out,
@@ -4465,6 +4470,7 @@ a {
               grid-template-columns: 48% 0% 48%;
               justify-content: center;
               gap: 3%;
+              position: relative;
 
               @media (max-width: 1000px) {
                 padding: 0px 20px;
@@ -4496,12 +4502,43 @@ a {
                   width: 30px;
                 }
               }
-              .s-input-interval__range {
-                margin-bottom: -1px;
-                margin-top: -1px;
-                padding: 0 1.6rem;
-              }
+
+         
+              
             }
+            .slider-container { 
+              width: 100%; 
+              height: 6px; 
+              position: relative; 
+              background: #e4e4e4; 
+              border-radius: 5px; 
+
+              .price-slider { 
+                height: 100%; 
+                left: 25%; 
+                right: 15%; 
+                position: absolute; 
+                border-radius: 5px; 
+                background: #01940b; 
+              }
+            } 
+
+            .range-input { 
+              position: relative; 
+              width: 100%; 
+
+
+              .range { 
+                position: absolute; 
+                width: 100%; 
+                height: 5px; 
+                background: none; 
+                top: -5px; 
+                // pointer-events: none; 
+                cursor: pointer; 
+                // -webkit-appearance: none; 
+              }               
+            } 
           }
 
           .choice__btns-block {
