--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4130,7 +4130,6 @@ a {
       }
     }
 
-
     .building {
       background: #F5F5F5;
       position: relative;
@@ -4503,42 +4502,51 @@ a {
                 }
               }
 
-         
-              
-            }
-            .slider-container { 
-              width: 100%; 
-              height: 6px; 
-              position: relative; 
-              background: #e4e4e4; 
-              border-radius: 5px; 
+              .slider-container {
+                position: absolute;
+                top: calc(100% - 1px);
+                left: 0;
+                right: 0;
+                height: 3px;
 
-              .price-slider { 
-                height: 100%; 
-                left: 25%; 
-                right: 15%; 
-                position: absolute; 
-                border-radius: 5px; 
-                background: #01940b; 
+                .range-slider {
+                  position: absolute;
+                  left: 0%;
+                  right: 0%;
+                  height: 100%;
+                  background: #748D55;
+                  margin: 0 13px;
+                }
               }
-            } 
+              .range-inputs-wrap {
+                position: absolute;
+                top: calc(100% - 1px);
+                left: 0;
+                right: 0;
+                height: 3px;                
 
-            .range-input { 
-              position: relative; 
-              width: 100%; 
+                & input {
+                  position: absolute;
+                  left: 0%;
+                  right: 0%;
+                  height: 100%;
+                  background: none;
+                  pointer-events: none;
+                  cursor: pointer;
+                  -webkit-appearance: none;
+                  margin: 0 10px;
+                }
 
-
-              .range { 
-                position: absolute; 
-                width: 100%; 
-                height: 5px; 
-                background: none; 
-                top: -5px; 
-                // pointer-events: none; 
-                cursor: pointer; 
-                // -webkit-appearance: none; 
-              }               
-            } 
+                input[type="range"]::-webkit-slider-thumb {
+                  height: 15px;
+                  width: 15px;
+                  border-radius: 50%;
+                  background: #748D55;
+                  pointer-events: auto;
+                  -webkit-appearance: none;
+                }
+              }
+            }
           }
 
           .choice__btns-block {
