исправит баг рендж слайдера

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4515,7 +4515,7 @@ a {
                   right: 0%;
                   height: 100%;
                   background: #748D55;
-                  margin: 0 13px;
+                  // margin: 0 13px;
                 }
               }
               .range-inputs-wrap {
@@ -4534,7 +4534,7 @@ a {
                   pointer-events: none;
                   cursor: pointer;
                   -webkit-appearance: none;
-                  margin: 0 10px;
+                  // margin: 0 10px;
                 }
 
                 input[type="range"]::-webkit-slider-thumb {
