--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -943,7 +943,7 @@ a {
 }
 
 .main {
-  padding-top: 80px;
+  padding-top: 70px;
   overflow: hidden;
   // background-color: #00c27c;
 }
@@ -2731,6 +2731,9 @@ a {
     gap: 2px;
   }
   .select__placeholder {
+    position: absolute;
+    top: 21px;
+    left: 20px;
     color: rgba(21, 0, 0, 0.5);
     font-size: 16px;
     font-weight: 400;
@@ -7407,16 +7410,14 @@ a {
           }
 
           .choice__btns-wrap {
-            display: grid;
-            grid-auto-flow: column;
-            justify-content: start;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: flex-start;
+            align-items: center;
+
             gap: 10px;
 
             @media (max-width: 1750px) {
-              display: flex;
-              flex-flow: row wrap;
-              justify-content: flex-start;
-              align-items: center;
               gap: 10px 15px;
             }
 
@@ -7499,6 +7500,7 @@ a {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
         gap: 10px;
+
         .apartments__item {
           padding: 20px;
           max-width: 420.5px;
@@ -7506,90 +7508,94 @@ a {
           background: #ffffff;
           border-radius: 5px;
 
-          display: grid;
-          grid-auto-flow: row;
-          grid-template-rows: auto 1fr auto auto;
-          gap: 10px;
-
-          .apartments__item-title {
-            font-family: Inter;
-            font-size: 15px;
-            font-weight: 400;
-            line-height: 18.15px;
-            text-align: left;
-            color: #616161;
-          }
-          .apartments__item-img {
-            padding: 30px;
-
-            & img {
-              display: block;
-              width: 100%;
-              height: 100%;
-              object-fit: contain;
-              object-position: center;
-            }
-          }
-          .apartments__item-desc {
-            font-family: Inter;
-            font-size: 18px;
-            font-weight: 500;
-            line-height: 21.78px;
-            text-align: left;
-            color: #616161;
-          }
-          .apartments__item-price-wrap {
+          .apartments__item-link {
             display: grid;
-            grid-auto-flow: column;
-            justify-content: start;
-            align-items: end;
+            grid-auto-flow: row;
+            grid-template-rows: auto 1fr auto auto;
             gap: 10px;
+            width: 100%;
+            height: 100%;
 
-            .apartments__item-new-price {
+            .apartments__item-title {
               font-family: Inter;
-              font-size: 30px;
-              font-weight: 500;
-              line-height: 36.3px;
+              font-size: 15px;
+              font-weight: 400;
+              line-height: 18.15px;
               text-align: left;
-              color: #000;
+              color: #616161;
             }
-            .apartments__item-old-price {
+            .apartments__item-img {
+              padding: 30px;
+
+              & img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                object-position: center;
+              }
+            }
+            .apartments__item-desc {
               font-family: Inter;
               font-size: 18px;
-              font-weight: 400;
+              font-weight: 500;
               line-height: 21.78px;
               text-align: left;
-              color: #8c8c8c;
-              text-decoration: line-through;
+              color: #616161;
             }
-          }
-          .apartments__item-footer {
-            display: flex;
-            gap: 5px;
-            flex-flow: row wrap;
-            align-content: flex-end;
-            border-top: 1px solid #cedfb8;
-            padding-top: 15px;
-
-            min-height: 90px;
-
-            .apartments__item-footer-item {
-              padding: 8px 16px;
-              border: 1px solid #748d55;
-              border-radius: 50px;
+            .apartments__item-price-wrap {
               display: grid;
               grid-auto-flow: column;
+              justify-content: start;
+              align-items: end;
               gap: 10px;
-              height: max-content;
 
-              .apartments__item-footer-item-text {
+              .apartments__item-new-price {
                 font-family: Inter;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 19.36px;
+                font-size: 30px;
+                font-weight: 500;
+                line-height: 36.3px;
                 text-align: left;
-                color: #748d55;
-                text-wrap: nowrap;
+                color: #000;
+              }
+              .apartments__item-old-price {
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 21.78px;
+                text-align: left;
+                color: #8c8c8c;
+                text-decoration: line-through;
+              }
+            }
+            .apartments__item-footer {
+              display: flex;
+              gap: 5px;
+              flex-flow: row wrap;
+              align-content: flex-end;
+              border-top: 1px solid #cedfb8;
+              padding-top: 15px;
+
+              min-height: 90px;
+
+              .apartments__item-footer-item {
+                padding: 8px 16px;
+                border: 1px solid #748d55;
+                border-radius: 50px;
+                display: grid;
+                grid-auto-flow: column;
+                gap: 10px;
+                height: max-content;
+
+                .apartments__item-footer-item-text {
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 400;
+                  line-height: 19.36px;
+                  text-align: left;
+                  color: #748d55;
+                  text-wrap: nowrap;
+                }
               }
             }
           }
@@ -7604,9 +7610,372 @@ a {
 }
 
 // --------------------------------------- apartments-page end ---------------------------------------
-// --------------------------------------- &&&&&& start ---------------------------------------
+// --------------------------------------- apartments-page-item start ---------------------------------------
 
-// --------------------------------------- &&&&&& end ---------------------------------------
+.apartments-item-page {
+  .about {
+    background: #f5f5f5;
+    .about__container {
+      padding: 10px 0 80px;
+      display: grid;
+      grid-template: auto / 1fr 565px;
+      gap: 20px;
+      .about__left {
+        position: relative;
+        padding: 40px;
+        background: #ffffff;
+        border-radius: 10px;
+        display: grid;
+        grid-auto-flow: row;
+        gap: 144px;
+
+        .about__btn-back {
+          display: grid;
+          grid-auto-flow: column;
+          gap: 15px;
+          padding: 13px 20px;
+          border: 1px solid #cbcbcb;
+          border-radius: 50px;
+          height: max-content;
+          width: max-content;
+
+          .about__btn-text {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 23.2px;
+            text-align: left;
+            color: #616161;
+          }
+        }
+        .about__compass {
+          position: absolute;
+          top: 25px;
+          right: 5px;
+          width: 130px;
+          height: 130px;
+        }
+        .about__img {
+          justify-self: center;
+          // grid-column: 2 span;
+
+          & img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+          }
+        }
+        .about__btn-wrap {
+          // grid-column: 2 span;
+          justify-self: center;
+          display: grid;
+          grid-auto-flow: column;
+          gap: 10px;
+          .about__btn {
+            padding: 10px 20px;
+            border: 1px solid #cbcbcb;
+            border-radius: 50px;
+            color: #616161;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 21.78px;
+            text-align: center;
+
+            &.about__btn_active {
+              padding: 10px 20px;
+              background: #56693e;
+              border-radius: 50px;
+              color: #fff;
+            }
+          }
+        }
+      }
+      .about__right {
+        padding: 40px;
+        background: #ffffff;
+        border-radius: 10px;
+        display: grid;
+        grid-auto-flow: row;
+        align-content: start;
+        gap: 15px;
+
+        .about__btn-complex {
+          margin-bottom: 25px;
+          padding: 9px 20px 9px 9px;
+          border: 1px solid #dfdfdf;
+          border-radius: 50px;
+          display: grid;
+          grid-auto-flow: column;
+          gap: 10px;
+          align-items: center;
+          align-content: center;
+          width: max-content;
+          height: max-content;
+
+          .about__btn-complex-img {
+            width: 30px;
+            height: 30px;
+            background: rgba(154, 188, 111, 0.2);
+            border-radius: 50%;
+          }
+          .about__btn-complex-text {
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 18px;
+            text-align: left;
+            color: #363636;
+          }
+          .about__btn-complex-arrow {
+          }
+        }
+
+        .about__right-title {
+          font-family: Inter;
+          font-size: 25px;
+          font-weight: 400;
+          line-height: 30.26px;
+          text-align: left;
+          color: #616161;
+        }
+        .about__right-price-wrap {
+          display: grid;
+          grid-auto-flow: column;
+          gap: 20px;
+          align-items: end;
+          justify-content: start;
+          padding-bottom: 20px;
+          border-bottom: 1px solid #dfdfdf;
+
+          .about__right-new-price {
+            font-family: Inter;
+            font-size: 40px;
+            font-weight: 500;
+            line-height: 48.41px;
+            text-align: left;
+            color: #363636;
+          }
+          .about__right-old-price {
+            font-family: Inter;
+            font-size: 25px;
+            font-weight: 400;
+            line-height: 30.26px;
+            text-align: left;
+            color: #616161;
+            text-decoration: line-through;
+          }
+        }
+        .about__right-info {
+          margin-bottom: 25px;
+          display: grid;
+          grid-auto-flow: column;
+          justify-content: space-between;
+          gap: 15px;
+
+          .about__right-info-left {
+            display: grid;
+            grid-template: max-content max-content / max-content max-content;
+            gap: 5px 50px;
+            justify-content: start;
+            align-content: center;
+
+            .about__right-info-title {
+              font-family: Inter;
+              font-size: 13px;
+              font-weight: 400;
+              line-height: 18.2px;
+              text-align: left;
+              color: #616161;
+            }
+            .about__right-info-text {
+              font-family: Inter;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 23.2px;
+              text-align: left;
+              color: #363636;
+            }
+          }
+          .choice__select {
+            width: 170px;
+            height: max-content;
+            align-self: center;
+          }
+        }
+
+        .about__right-btn-block {
+          margin-bottom: 35px;
+          display: grid;
+          grid-auto-flow: row;
+          gap: 10px;
+
+          .about__right-btn-block-title {
+            font-family: Inter;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 18.2px;
+            text-align: left;
+            color: #616161;
+          }
+
+          .about__right-btn-block-wrap {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 5px;
+
+            .about__right-btn-block-filter {
+              padding: 6px 17px;
+              display: grid;
+              grid-auto-flow: column;
+              justify-content: start;
+              align-items: center;
+              gap: 5px;
+              background: transparent;
+              font-size: 16px;
+              font-weight: 500;
+              color: #8cab64;
+              white-space: nowrap;
+              border: 1px solid #8cab64;
+              border-radius: 50px;
+              pointer-events: none;
+              // transition: color 0.3s ease-in-out,
+              // background-color 0.3s ease-in-out,
+              // border-color 0.3s ease-in-out;
+            }
+          }
+        }
+
+        .about__right-payment-wrap {
+          margin-bottom: 35px;
+
+          .about__right-payment-title {
+            font-family: Inter;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 18.2px;
+            text-align: left;
+            color: #616161;
+            margin-bottom: 10px;
+          }
+
+          .checkbox-list {
+            display: grid;
+            grid-template: auto / 1fr 1fr;
+            gap: 10px;
+
+            .checkbox {
+              .checkbox__label {
+                position: relative;
+                display: block;
+                cursor: pointer;
+                padding: 12px 15px 15px;
+                min-height: 80px;
+                border: 1px solid #dfdfdf;
+                border-radius: 5px;
+                background-color: transparent;
+                display: grid; 
+                grid-auto-flow: row;
+                align-content: space-between;
+
+                &.checkbox__label_active {
+                  border: 1px solid #EFFCDE;
+                  background: #EFFCDE;
+                }
+
+                
+                .checkbox__input {
+                  display: none;      
+                  
+                  &:checked {                   
+                    & + .checkbox__mark::before {
+                      opacity: 1;
+                    }
+                  }
+                }
+                
+                .checkbox__mark {
+                  position: absolute;
+                  top: 12px;
+                  right: 15px;
+                  border-radius: 50%;
+                  width: 20px;
+                  height: 20px;
+                  border: 1px solid #CBCBCB;
+                  background-color: #fff;
+                  z-index: 1;
+      
+                  &::before {
+                    content: "";
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    translate: -50% -50%;
+                    width: 12px;
+                    height: 12px;
+                    background-color: #748D55;
+                    border-radius: 50%;
+                    opacity: 0;
+                    z-index: 1;
+
+
+                  }
+                }
+
+                .checkbox__tite {
+                  font-family: Inter;
+                  font-size: 14px;
+                  font-weight: 400;
+                  line-height: 16.94px;
+                  text-align: left;
+                  color: #616161;
+                  opacity: 0.8;
+                }
+
+                .checkbox__desc {
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 500;
+                  line-height: 22.4px;
+                  text-align: left;
+                  color: #363636;
+                }
+              }
+            }
+
+          }
+
+
+
+
+
+        }
+        .about__right-bot-btn-wrap {
+          display: grid;
+          grid-template: max-content / 1fr 1fr;
+          gap: 10px;
+          .about__right-bot-btn {
+            width: auto;
+          }
+        }
+        .about__right-desc {
+          font-family: Inter;
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 16.8px;
+          text-align: left;
+          color: rgba(#000, 0.4);
+        }
+      }
+    }
+  }
+}
+
+// --------------------------------------- apartments-page-item end ---------------------------------------
 // --------------------------------------- &&&&&& start ---------------------------------------
 
 // --------------------------------------- &&&&&& end ---------------------------------------
