добавит карту яндекс на страницу "Квартира"

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8101,6 +8101,12 @@ a {
       
     }
   }
+
+  .map {
+    width: 100%;
+    height: 600px;
+    background: #0fa5ad;
+  }
 }
 
 // --------------------------------------- apartments-page-item end ---------------------------------------
